# miscellaneous-cpp

./: .gitignore  README.md
hello-bazel/: .bazelrc  .gitignore  BUILD  README.md
hello-bazel-debug/: BUILD  README.md
hello-bazel-debug-vs/: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  main.cpp
hello-bazel-debug-vscode/: WORKSPACE  build_and_link.sh  main.cpp
hello-bazel-debug/src/: BUILD  main.cpp
hello-java-jar/: README.md  build.sh
hello-java-mediacodec/: JAR_BUILD_README.md  README.md  build.sh
hello-java-mediacodec/src/com/example/mediacodec/: MediaCodecActivity.java  MediaCodecExample.java  MediaCodecHelper.java  activity_media_codec.xml
hello-leveldb/: BUILD  MODULE.bazel  README.md  WORKSPACE  leveldb.BUILD  main.cc
hello-zero-copy/: CMakeLists.txt  README.md  create_test_file.cpp  main.cpp  zero_copy_examples.cpp  zero_copy_examples.h  zero_copy_test
websocket-example/: CMakeLists.txt  README.md  websocket_client.cpp  websocket_server.cpp
