module(
    name = "hello_leveldb",
)

bazel_dep(name = "bazel_skylib", version = "1.3.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_google_leveldb",
    urls = ["https://github.com/google/leveldb/archive/1.23.tar.gz"],
    strip_prefix = "leveldb-1.23",
    sha256 = "9a37f8a6174f09bd622bc723b55881dc541cd50747cbd08831c2a82d620f6d76",
    build_file = "leveldb.BUILD",
)